BREAKING CHANGE: image now accessible

--- a/package.json
+++ b/package.json
@@ -2,14 +2,18 @@
   "name": "intro_nodejs",
   "version": "1.0.0",
   "description": "",
-  "main": "Number1.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
     "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.12"
   }
 }
